--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -38,15 +38,15 @@ $base-color: #1ED27A;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
-$background: #fff;
-$background-alt: #f2f2f5;
+$background-alt: #778899;
+$background: #2F4F4F;
 
 // Define border colors
 $border: #dcd9d9;
 
 // Define text colors
-$heading: #374054;
-$text: #74808a;
+$heading: #F8F8FF;
+$text: #8FBC8F;
 
 /*
     ---------------------
