--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -39,10 +39,10 @@ $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
 $background-alt: #778899;
-$background: #2F4F4F;
+$background: #778899;
 
 // Define border colors
-$border: #dcd9d9;
+$border: #2F4F4F;
 
 // Define text colors
 $heading: #F8F8FF;
