--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -38,8 +38,8 @@ $base-color: #1ED27A;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
-$background-alt: #778899;
-$background: #778899;
+$background-alt: #2F4F4F;
+$background: #2F4F4F;
 
 // Define border colors
 $border: #2F4F4F;
