--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,19 +34,19 @@
 */
 
 // Define base and accent colors
-$base-color: #1ED27A;
+$base-color: #12a15c;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
-$background-alt: #2F4F4F;
-$background: #2F4F4F;
+$background-alt: #fff;
+$background: #f2f2f5;
 
 // Define border colors
-$border: #2F4F4F;
+$border: #dcd9d9;
 
 // Define text colors
-$heading: #2F4F4F;
-$text: #8FBC8F;
+$heading: #374854;
+$text: #74808a; 
 
 /*
     ---------------------
