--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -38,8 +38,8 @@ $base-color: #12a15c;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
-$background-alt: #fff;
-$background: #f2f2f5;
+$background-alt: #f2f2f5;
+$background: #fff;
 
 // Define border colors
 $border: #dcd9d9;
