--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,7 +34,7 @@
 */
 
 // Define base and accent colors
-$base-color: #12a15c;
+$base-color: #1fc273;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
